methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:26: error: not found: value righ
  righ()
  ^